production/model-platform/data-pipeline/foundation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k12-data-pipeline-dagster
  namespace: k12-data-pipeline
  labels:
    app.kubernetes.io/name: k12-data-pipeline-dagster
    app.kubernetes.io/part-of: model-platform
    app.kubernetes.io/component: dagster
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: k12-data-pipeline-dagster
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
